cititechdNew2024Jan/force-app/main/default/objects/KV_Presentation_Link__c/KV_Presentation_Link__c.object-meta.xml
<CustomObject>
    <label>KV Presentation to Send</label>
    <nameField>
        <displayFormat>{MM}/{DD}/{YY}-{0000}</displayFormat>
        <label>KV Presentation Link ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sent KV Presentations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>