cititechdNew2024Jan/force-app/main/default/objects/KV_Presentation_Link__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>KV_Presentation_Links</relationshipName>
    <type>Lookup</type>
</CustomField>