cititechdNew2024Jan/force-app/main/default/objects/KV_Presentation_Link__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>KV_Presentation_Links</relationshipName>
    <type>Lookup</type>
</CustomField>