cititechdNew2024Jan/force-app/main/default/objects/KV_Presentation_Link__c/fields/Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score__c</fullName>
    <label>Engagement Score</label>
    <summarizedField>KV_Presentation_Link_View__c.Engagement_Score__c</summarizedField>
    <summaryForeignKey>KV_Presentation_Link_View__c.KV_Presentation_Link__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>