cititechdNew2024Jan/force-app/main/default/objects/KV_Presentation_Link__c/fields/KV_Presentation__c.field-meta.xml
<CustomField>
    <fullName>KV_Presentation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>KV Presentation</label>
    <referenceTo>KV_Presentation__c</referenceTo>
    <relationshipName>KV_Presentation_Links</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>