cititechdNew2024Jan/force-app/main/default/objects/KV_Presentation_Link__c/fields/Last_Viewed__c.field-meta.xml
<CustomField>
    <fullName>Last_Viewed__c</fullName>
    <label>Last Viewed</label>
    <summarizedField>KV_Presentation_Link_View__c.CreatedDate</summarizedField>
    <summaryForeignKey>KV_Presentation_Link_View__c.KV_Presentation_Link__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>