cititechdNew2024Jan/force-app/main/default/objects/KV_Presentation_Link__c/fields/Link_URL__c.field-meta.xml
<CustomField>
    <fullName>Link_URL__c</fullName>
    <formula>KV_Presentation__r.URL__c &amp; &quot;?sfid=&quot; &amp; Id</formula>
    <label>Link URL</label>
    <type>Text</type>
</CustomField>