cititechdNew2024Jan/force-app/main/default/objects/KV_Presentation_Link__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>KV_Presentation_Links</relationshipName>
    <type>Lookup</type>
</CustomField>