cititechdNew2024Jan/force-app/main/default/objects/KV_Presentation_Link__c/fields/Send_Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Notification__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Send an email notification when this presentation link is viewed</description>
    <inlineHelpText>Check this option to receive email notifications when this presentation link is viewed</inlineHelpText>
    <label>Send Email Notification</label>
    <type>Checkbox</type>
</CustomField>