cititechdNew2024Jan/force-app/main/default/objects/KV_Presentation_Link__c/fields/Slides_Viewed_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Slides_Viewed_Percentage__c</fullName>
    <label>Slides Viewed %</label>
    <summarizedField>KV_Presentation_Link_View__c.Slides_Viewed_Percentage__c</summarizedField>
    <summaryForeignKey>KV_Presentation_Link_View__c.KV_Presentation_Link__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>