cititechdNew2024Jan/force-app/main/default/objects/KV_Presentation_Link__c/fields/Total_Views__c.field-meta.xml
<CustomField>
    <fullName>Total_Views__c</fullName>
    <label>Total Views</label>
    <summaryForeignKey>KV_Presentation_Link_View__c.KV_Presentation_Link__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>