cititechdNew2024Jan/force-app/main/default/objects/KV_Presentation_Link__c/fields/Video_Playback_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Video_Playback_Percentage__c</fullName>
    <label>Video Playback %</label>
    <summarizedField>KV_Presentation_Link_View__c.Video_Playback_Percentage__c</summarizedField>
    <summaryForeignKey>KV_Presentation_Link_View__c.KV_Presentation_Link__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>