cititechdNew2024Jan/force-app/main/default/objects/KV_Presentation_Link__c/fields/Viewed__c.field-meta.xml
<CustomField>
    <fullName>Viewed__c</fullName>
    <formula>Total_Views__c  &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Viewed</label>
    <type>Checkbox</type>
</CustomField>